# splatdotink

./: .clang-format  .gitignore  Makefile.am  README.md  conanfile.txt  configure.ac
infiles/: splatdotink.pc.in
src/: lib.cpp
src/include/: salmon_sample.h  sample_data.h  splatdotink.hpp
test/: sanity.cpp
